--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "18320867985 <18320867985>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -17,6 +17,7 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
@@ -64,5 +65,6 @@
     "not ie <= 8"
   ],
   "main": ".postcssrc.js",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": "https://github.com/18320867985/webpack-vue.git"
 }
