--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.4.9",
     "vue": "^2.3.3",
     "vue-router": "^2.6.0"
   },
@@ -66,5 +67,12 @@
   ],
   "main": ".postcssrc.js",
   "license": "ISC",
-  "repository": "https://github.com/18320867985/webpack-vue.git"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/18320867985/webpack-vue.git"
+  },
+  "bugs": {
+    "url": "https://github.com/18320867985/webpack-vue/issues"
+  },
+  "homepage": "https://github.com/18320867985/webpack-vue#readme"
 }
